--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -1,18 +1,10 @@
-default:
-  image: node:16
-build-job:
+stages:
+  -  build
+build:
   stage: build
+  image:
+    - node:16
   script:
     - console.log(Hello, $GITLAB_USER_LOGIN)
-
-test-job1:
-  stage: test
-  script:
-    - console.log("This job tests something")
-
-deploy-prod:
-  stage: deploy
-  script:
-    - console.log("This job deploys something from the $CI_COMMIT_BRANCH branch.")
 tags:
   - docker
