--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,15 @@
-image: node:latest
+
 
 build:
   stage: build
+  image: node:latest
   script:
     - npm install
     - npm run test
   tags:
     - docker
+  only:
+    - dev
 
 # test_db:
 #   script:
