--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,45 @@
-image: node:16.13.2
-cache:
-  paths:
-    - node_modules/
+image: docker:latest
+
+services: 
+  - docker:dind
+
 before_script:
-  - npm install
-test:
+  - docker-compose version
+
+stages:
+  - build
+  - test
+  - teardown
+  - deploy
+
+build:
+  stage: build
   script:
-    - npm test
+    - docker build -t app:v1 .
+  only:
+    - dev
+
+test:
+  stage: test
+  script:
+    - docker-compose --env-file=./config/.env.stage up
+  only:
+    - dev
+
+teardown:
+  stage: test
+  script:
+    - docker-compose --env-file=./config/.env.stage down
+  only:
+    - dev
+    
+deploy:
+  stage: deploy
+  script:
+    - echo "This job tests something, but takes more time than test-job1."
+    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
+    - echo "which simulates a test that runs 20 seconds longer than test-job1"
+    - sleep 20
+  only:
+    - dev
+
