--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,40 +1,64 @@
-before_script:
-  - docker-compose version
+# image: docker:latest
 
-stages:
-  - build
-  - test
-  - teardown
-  - deploy
+# services: 
+#   - docker:dind
 
-build:
+# before_script:
+#   - docker-compose version
+
+# stages:
+#   - build
+#   - test
+#   - teardown
+#   - deploy
+
+some test job:
+  image: node:16.13.2
+  # rules:
+  #   - if: $CI_PIPELINE_SOURCE != 'schedule'
+  script:
+    - npm run test
+run test:
+  image: $CI_REGISTRY_IMAGE
+  # rules:
+  #   - if: $CI_PIPELINE_SOURCE != 'schedule'
+  script:
+    - npm run test
+
+build image:
   stage: build
+  image: docker:20.10.12
+  services: docker:20.10.12-dind
+  # rules:
+  #   - if: $CI_PIPELINE_SOURCE == 'schedule'
   script:
-    - docker build -t app:v1 .
+    - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
+    - docker build -t $CI_REGISTRY_IMAGE .
+    - docker push $CI_REGISTRY_IMAGE
   only:
     - dev
 
-test:
-  stage: test
-  script:
-    - docker-compose --env-file=./config/.env.stage up
-  only:
-    - dev
+# test:
+#   stage: test
+#   script:
+#     - docker-compose --env-file=./config/.env.stage up
+#   only:
+#     - dev
 
-teardown:
-  stage: test
-  script:
-    - docker-compose --env-file=./config/.env.stage down
-  only:
-    - dev
-
-deploy:
-  stage: deploy
-  script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-    - sleep 20
-  only:
-    - dev
+# teardown:
+#   stage: test
+#   script:
+#     - docker-compose --env-file=./config/.env.stage down
+#   only:
+#     - dev
+    
+# deploy:
+#   stage: deploy
+#   script:
+#     - echo "This job tests something, but takes more time than test-job1."
+#     - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
+#     - echo "which simulates a test that runs 20 seconds longer than test-job1"
+#     - sleep 20
+#   only:
+#     - dev
 
