--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,9 +70,15 @@ deploy image:
   stage: deploy
   needs: 
     - "push image"
+  before_script:
+    - apk add openssh-client # Add SSH client for alpine 
+    - eval $(ssh-agent -s) # Run the SSH client 
+    # Adding environment's variable ID_RSA to the SSH client's agent that manages the private keys
+    - echo "$ID_RSA" | tr -d '\r' | ssh-add -
+    # Create the SSH directory and give it the right permissions
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
   script:
-    - chmod og= $ID_RSA
-    - apk update && apk add openssh-client
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE"
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev down"
