--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,10 +78,10 @@ deploy image:
     - chmod 700 ~/.ssh
 
   script:
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev down"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev up -d"
+    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
+    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE"
+    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev down"
+    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev up -d"
   only:
     - dev
 
