--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,14 +75,14 @@ deploy image:
     - eval $(ssh-agent -s) # Run the SSH client 
     - mkdir -p ~/.ssh
     - echo "$ID_RSA" > ~/.ssh/id_rsa 
-    - chmod 700 ~/.ssh/id_rsa
-    - ssh-add ~/.ssh/id_rsa 
+    - chmod 400 ~/.ssh/id_rsa
+    # - ssh-add ~/.ssh/id_rsa 
 
   script:
-    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
-    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE"
-    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev down"
-    - ssh -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev up -d"
+    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
+    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE"
+    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev down"
+    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev up -d"
   only:
     - dev
 
