--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,18 +71,24 @@ deploy image:
   needs: 
     - "push image"
   before_script:
-    - apk add openssh-client # Add SSH client for alpine 
-    - eval $(ssh-agent -s) # Run the SSH client 
-    - mkdir -p ~/.ssh
-    - echo "$ID_RSA" > ~/.ssh/id_rsa 
-    - chmod 400 ~/.ssh/id_rsa
-    # - ssh-add ~/.ssh/id_rsa 
+    # - apk add openssh-client # Add SSH client for alpine 
+    # - eval $(ssh-agent -s) # Run the SSH client 
+    # - mkdir -p ~/.ssh
+    # - echo "$ID_RSA" > ~/.ssh/id_rsa 
+    # - chmod 400 ~/.ssh/id_rsa
+    # # - ssh-add ~/.ssh/id_rsa 
 
   script:
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev down"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "docker-compose --env-file=./config/.env.dev up -d"
+    - |
+      ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deployer@$SERVER_IP "
+        set -x -e
+        # Commands to run in bash
+        cd ~/app
+        docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+        docker pull $CI_REGISTRY_IMAGE
+        docker-compose --env-file=./config/.env.dev down
+        docker-compose --env-file=./config/.env.dev up -d
+      "
   only:
     - dev
 
