--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,8 +86,8 @@ deploy image:
         cd ~/app
         docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
         docker pull $CI_REGISTRY_IMAGE
-        docker-compose --env-file=./config/.env.dev down
-        docker-compose --env-file=./config/.env.dev up -d
+        docker-compose --env-file=config/.env.dev down
+        docker-compose --env-file=config/.env.dev up -d
       "
   only:
     - dev
