--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ deploy image:
         # Commands to run in bash
         cd ~/app
         docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-        docker pull $CI_REGISTRY_IMAGE
+        # docker pull $CI_REGISTRY_IMAGE
         docker-compose --env-file=config/.env.prod down
         docker-compose --env-file=config/.env.prod up -d
       "
