--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build image:
   stage: build
   script:
     # - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER $CI_REGISTRY --password-stdin
-    - docker build -t $CI_REGISTRY_IMAGE .
+    - docker build -t $CI_REGISTRY_IMAGE/app .
     # - docker push $CI_REGISTRY_IMAGE
     # - docker-compose --env-file=./config/.env.dev up -d
   only:
@@ -56,7 +56,7 @@ push image:
   stage: deploy
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker push $CI_REGISTRY_IMAGE
+    - docker push $CI_REGISTRY_IMAGE/app
   only:
     - dev
 
@@ -86,8 +86,8 @@ deploy image:
         cd ~/app
         docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
         docker pull $CI_REGISTRY_IMAGE
-        docker-compose --env-file=./config/.env.dev down
-        docker-compose --env-file=./config/.env.dev up -d
+        docker-compose --env-file=config/.env.prod down
+        docker-compose --env-file=config/.env.prod up -d
       "
   only:
     - dev
