--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   app:
-    image: app
+    image: registry.gitlab.com/hka27/repo-mirror/app
     environment:
       - SCRIPT
       - PORT
